--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.4",
-    "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.15"
   }
 }
