- remove cron job

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js",
+    "deploy": "gcloud functions deploy frankoTickets --entry-point frankoTickets --runtime nodejs20 --trigger-http --region=us-central1 --no-allow-unauthenticated"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,6 @@
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
-    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15"
   }
 }
